--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@polkadot/api": "^12.3.1",
     "bn.js": "^5.2.1",
     "dotenv": "^16.4.5",
-    "keccak256": "^1.0.6",
+    "js-sha3": "^0.9.3",
     "snarkjs": "^0.7.4",
     "web3": "^4.9.0"
   },
