--- a/package.json
+++ b/package.json
@@ -6,26 +6,37 @@
   "license": "ISC",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint 'src/**/*.ts' --fix --no-ignore",
+    "format": "prettier --write 'src/**/*.ts'"
   },
   "dependencies": {
-    "@polkadot/api": "^12.3.1",
-    "bn.js": "^5.2.1",
-    "dotenv": "^16.4.5",
-    "js-sha3": "^0.9.3",
-    "snarkjs": "^0.7.4",
-    "web3": "^4.9.0"
+    "@polkadot/api": "12.4.2",
+    "bn.js": "5.2.1",
+    "dotenv": "16.4.5",
+    "js-sha3": "0.9.3",
+    "snarkjs": "0.7.4",
+    "web3": "4.11.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@jest/globals": "29.5.0",
     "@types/debug": "^4.1.12",
     "@types/jest": "^29.5.12",
     "@types/node": "20.1.1",
     "@types/snarkjs": "^0.7.8",
     "@types/web3": "^1.2.2",
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "@typescript-eslint/parser": "^8.2.0",
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.9.0",
     "jest": "^29.7.0",
+    "prettier": "^3.3.3",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "typescript-eslint": "^8.2.0"
   }
 }
