--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "lint": "eslint 'src/**/*.ts' --fix --no-ignore",
+    "test:coverage": "npx jest --coverage --collectCoverageFrom='src/**/*.{js,ts,tsx}' --testPathIgnorePatterns='tests/'",
+    "test:file:coverage": "node -e 'const path = process.argv[1]; require(\"child_process\").execSync(`npx jest --coverage --collectCoverageFrom=\"${path}/index.ts\" ${path}/index.test.ts`, { stdio: \"inherit\" });' --",
+    "lint": "eslint 'src/**/*.ts' --fix --ignore-pattern '**/*.test.ts'",
     "format": "prettier --write 'src/**/*.ts'"
   },
   "dependencies": {
