--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "types": ["jest", "node"]
   },
   "include": ["**/*.ts"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"]
 }
