--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
 target/
-**/*.rs.bk
 .idea
 *.iml
 .vscode
-docker/resources/deploy
-docker/resources/envs/.env
 node_modules
-yarn.lock
-lcov.info
-benchmarking_errors.txt
 dist/
 .env
 coverage/
+*.d.ts
+*.*.map
+*.tgz
