--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,16 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
+    "declaration": true,
+    "declarationMap": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
+    "outDir": "./dist",
     "types": ["jest", "node"]
   },
-  "include": ["**/*.ts"],
-  "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist","**/*.spec.ts", "**/*.test.ts"]
 }
