Updates following first review comments

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "pack-and-install": "npm run build && npm pack && rm -rf node_modules/zkverifyjs && npm install ./$(npm pack | tail -n 1) --no-save",
     "bump-version": "npm version $npm_config_level && git add . && git commit -m 'chore: bump version to $npm_package_version' && git tag v$npm_package_version && git push origin --tags && npm run build",
     "test": "jest",
-    "test:coverage": "npx jest --coverage --collectCoverageFrom='src/**/*.{js,ts,tsx}' --testPathIgnorePatterns='tests/'",
-    "test:file:coverage": "node -e 'const path = process.argv[1]; require(\"child_process\").execSync(`npx jest --coverage --collectCoverageFrom=\"${path}/index.ts\" ${path}/index.test.ts`, { stdio: \"inherit\" });' --",
+    "test:coverage": "jest --coverage",
+    "test:file:coverage": "node -e 'const path = process.argv[1]; require(\"child_process\").execSync(`jest --coverage --collectCoverageFrom=\"${path}/index.ts\" ${path}/index.test.ts`, { stdio: \"inherit\" });' --",
     "lint": "eslint 'src/**/*.ts' --fix --ignore-pattern '**/*.test.ts'",
     "format": "prettier --write 'src/**/*.ts'"
   },
