--- a/package.json
+++ b/package.json
@@ -91,9 +91,13 @@
     "lint-staged": "^15.2.10",
     "ls-engines": "^0.9.3",
     "prettier": "^3.3.3",
+    "remark-parse": "11.0.0",
+    "remark-stringify": "11.0.0",
+    "unified": "11.0.5",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.2.0"
+    "typescript-eslint": "^8.2.0",
+    "unist-util-visit": "5.0.0"
   }
 }
