--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "test:file:coverage": "node -e 'const path = process.argv[1]; require(\"child_process\").execSync(`jest --coverage --collectCoverageFrom=\"${path}/index.ts\" ${path}/index.test.ts`, { stdio: \"inherit\" });' --",
     "lint": "eslint 'src/**/*.ts' --fix --ignore-pattern '**/*.test.ts'",
     "format": "prettier --write 'src/**/*.ts'",
+    "generate-readme-for-docs": "node ci/generateDocsReadme.js",
     "prepare": "husky"
   },
   "lint-staged": {
