--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lint": "eslint 'src/**/*.ts' --fix --ignore-pattern '**/*.test.ts'",
     "format": "prettier --write 'src/**/*.ts'",
     "generate-readme-for-docs": "node ci/generateDocsReadme.js",
+    "preview-deploy-zkverify-docs": "",
     "prepare": "husky"
   },
   "lint-staged": {
