--- a/.github/workflows/ci-publish-package.yml
+++ b/.github/workflows/ci-publish-package.yml
@@ -6,8 +6,10 @@ on:
       - 'v*'
 
 jobs:
-  publish-package:
+  build-package:
     runs-on: ubuntu-latest
+    outputs:
+      build-directory: ${{ steps.upload_build.outputs.build_directory }}
 
     steps:
       - name: Checkout code
@@ -28,6 +30,31 @@ jobs:
       - name: Run tests
         run: npm run test
 
+      - name: Upload build artifacts
+        id: upload_build
+        uses: actions/upload-artifact@v4
+        with:
+          name: build
+          path: ./dist
+
+  publish-package:
+    runs-on: ubuntu-latest
+    needs: build-package
+
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: ./dist
+          pattern: '**/*'
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          cache: 'npm'
+
       - name: Authenticate to npm registry
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -36,7 +63,7 @@ jobs:
       - name: Publish to npm
         run: npm publish
 
-      - name: Send Slack Notification
+      - name: Send Slack Notification for Publish
         if: ${{ !cancelled() }}
         uses: slackapi/slack-github-action@v1.25.0
         with:
@@ -53,5 +80,5 @@ jobs:
               ]
             }
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.QA_SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: ${{ secrets.RELEASES_PROD_SLACK_WEBHOOK_URL }}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
