Correct changes for husky...

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "node": ">= 18"
   },
   "scripts": {
-    "prepare": "husky",
     "build": "tsc",
     "pack-and-install": "npm run build && npm pack && rm -rf node_modules/zkverifyjs && npm install ./$(npm pack | tail -n 1) --no-save",
     "bump-version": "npm version $npm_config_level && git add . && git commit -S -m \"chore: bump version to $npm_package_version\" && git push && npm run build",
@@ -32,13 +31,8 @@
     "test:coverage": "jest --coverage",
     "test:file:coverage": "node -e 'const path = process.argv[1]; require(\"child_process\").execSync(`jest --coverage --collectCoverageFrom=\"${path}/index.ts\" ${path}/index.test.ts`, { stdio: \"inherit\" });' --",
     "lint": "eslint 'src/**/*.ts' --fix --ignore-pattern '**/*.test.ts'",
-    "format": "prettier --write 'src/**/*.ts'"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run format && npm run lint",
-      "pre-push": "npm run build && npm test"
-    }
+    "format": "prettier --write 'src/**/*.ts'",
+    "prepare": "husky"
   },
   "keywords": [
     "blockchain",
