--- a/package.json
+++ b/package.json
@@ -34,6 +34,13 @@
     "format": "prettier --write 'src/**/*.ts'",
     "prepare": "husky"
   },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "prettier --write",
+      "eslint --fix --ignore-pattern '**/*.test.ts'",
+      "git add"
+    ]
+  },
   "keywords": [
     "blockchain",
     "crypto",
@@ -81,6 +88,7 @@
     "globals": "^15.9.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.10",
     "ls-engines": "^0.9.3",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.4",
