Set env variables in workflow

--- a/.github/workflows/ci-build-and-test.yml
+++ b/.github/workflows/ci-build-and-test.yml
@@ -11,6 +11,15 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    env:
+      SEED_PHRASE_1: ${{ secrets.SEED_PHRASE_1 }}
+      SEED_PHRASE_2: ${{ secrets.SEED_PHRASE_2 }}
+      SEED_PHRASE_3: ${{ secrets.SEED_PHRASE_3 }}
+      SEED_PHRASE_4: ${{ secrets.SEED_PHRASE_4 }}
+      SEED_PHRASE_5: ${{ secrets.SEED_PHRASE_5 }}
+      SEED_PHRASE_6: ${{ secrets.SEED_PHRASE_6 }}
+      SEED_PHRASE_7: ${{ secrets.SEED_PHRASE_7 }}
+      SEED_PHRASE_8: ${{ secrets.SEED_PHRASE_8 }}
 
     steps:
       - name: Checkout code
