Additional changes following review

--- a/.github/workflows/ci-build-and-test.yml
+++ b/.github/workflows/ci-build-and-test.yml
@@ -1,12 +1,8 @@
 name: CI Build And Test Workflow
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
-    branches:
-      - main
+    types: [opened]
   workflow_dispatch:
 
 jobs:
