--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zkverifyjs",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Submit proofs to zkVerify and query proof state with ease using our npm package.",
   "author": "Horizen Labs <research@horizenlabs.io>",
   "license": "GPL-3.0",
@@ -31,7 +31,15 @@
     "test:coverage": "jest --coverage",
     "test:file:coverage": "node -e 'const path = process.argv[1]; require(\"child_process\").execSync(`jest --coverage --collectCoverageFrom=\"${path}/index.ts\" ${path}/index.test.ts`, { stdio: \"inherit\" });' --",
     "lint": "eslint 'src/**/*.ts' --fix --ignore-pattern '**/*.test.ts'",
-    "format": "prettier --write 'src/**/*.ts'"
+    "format": "prettier --write 'src/**/*.ts'",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "prettier --write",
+      "eslint --fix --ignore-pattern '**/*.test.ts'",
+      "git add"
+    ]
   },
   "keywords": [
     "blockchain",
@@ -78,7 +86,9 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.9.0",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.10",
     "ls-engines": "^0.9.3",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.4",
