--- a/.github/workflows/ci-publish-package.yml
+++ b/.github/workflows/ci-publish-package.yml
@@ -9,6 +9,15 @@ on:
 jobs:
   build-package:
     runs-on: ubuntu-latest
+    env:
+      SEED_PHRASE_1: ${{ secrets.SEED_PHRASE_1 }}
+      SEED_PHRASE_2: ${{ secrets.SEED_PHRASE_2 }}
+      SEED_PHRASE_3: ${{ secrets.SEED_PHRASE_3 }}
+      SEED_PHRASE_4: ${{ secrets.SEED_PHRASE_4 }}
+      SEED_PHRASE_5: ${{ secrets.SEED_PHRASE_5 }}
+      SEED_PHRASE_6: ${{ secrets.SEED_PHRASE_6 }}
+      SEED_PHRASE_7: ${{ secrets.SEED_PHRASE_7 }}
+      SEED_PHRASE_8: ${{ secrets.SEED_PHRASE_8 }}
     outputs:
       build-directory: ${{ steps.upload_build.outputs.build_directory }}
 
