--- a/.github/workflows/ci-publish-package.yml
+++ b/.github/workflows/ci-publish-package.yml
@@ -18,8 +18,6 @@ jobs:
       SEED_PHRASE_6: ${{ secrets.SEED_PHRASE_6 }}
       SEED_PHRASE_7: ${{ secrets.SEED_PHRASE_7 }}
       SEED_PHRASE_8: ${{ secrets.SEED_PHRASE_8 }}
-    outputs:
-      build-directory: ${{ steps.upload_build.outputs.build_directory }}
 
     steps:
       - name: Checkout code
@@ -39,6 +37,10 @@ jobs:
 
       - name: Run tests
         run: npm run test
+
+      - name: Extract Package Version
+        id: extract_version
+        run: echo "package_version=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
 
       - name: Upload build artifacts
         id: upload_build
@@ -63,7 +65,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
-          cache: 'npm'
 
       - name: Authenticate to npm registry
         env:
@@ -71,10 +72,11 @@ jobs:
         run: echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > ~/.npmrc
 
       - name: Publish to npm
+        id: publish
         run: npm publish
 
       - name: Send Slack Notification for Publish
-        if: ${{ !cancelled() }}
+        if: steps.publish.outcome == 'success'
         uses: slackapi/slack-github-action@v1.25.0
         with:
           payload: |
@@ -84,7 +86,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "*zkVerifyJS Package Published*\n\n*Build URL:* <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|Click here to view the build>"
+                    "text": "*:tada:  :zk-logo-icon-square-black:  zkVerifyJS Package v${{ env.package_version }} Published  :zk-logo-icon-square-black:  :tada:*\n\n*Build URL:* <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|Click here to view the build>\n\n*Published Package:* <https://www.npmjs.com/package/zkverifyjs/v/${{ env.package_version }}|zkverifyjs@${{ env.package_version }}>"
                   }
                 }
               ]
