--- a/.github/workflows/ci-publish-package.yml
+++ b/.github/workflows/ci-publish-package.yml
@@ -54,6 +54,9 @@ jobs:
     needs: build-package
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
