--- a/.github/workflows/ci-publish-package.yml
+++ b/.github/workflows/ci-publish-package.yml
@@ -76,7 +76,7 @@ jobs:
 
       - name: Publish to npm
         id: publish
-        run: npm publish
+        run: npm publish --ignore-scripts
 
       - name: Send Slack Notification for Publish
         if: steps.publish.outcome == 'success'
