--- a/.github/workflows/ci-build-and-test.yml
+++ b/.github/workflows/ci-build-and-test.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Run commitlint
+        run: npx commitlint --from=origin/main --to=HEAD
+
       - name: Lint
         run: npm run lint
 
