--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
     "web3": "4.11.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.9.0",
     "@jest/globals": "29.5.0",
     "@types/debug": "^4.1.12",
@@ -94,11 +96,11 @@
     "prettier": "^3.3.3",
     "remark-parse": "11.0.0",
     "remark-stringify": "11.0.0",
-    "unified": "11.0.5",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.2.0",
+    "unified": "11.0.5",
     "unist-util-visit": "5.0.0"
   }
 }
