--- a/.github/workflows/ci-publish-package.yml
+++ b/.github/workflows/ci-publish-package.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-package:
+  build-and-publish:
     runs-on: ubuntu-latest
     env:
       SEED_PHRASE_1: ${{ secrets.SEED_PHRASE_1 }}
@@ -42,33 +42,6 @@ jobs:
         id: extract_version
         run: echo "package_version=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
 
-      - name: Upload build artifacts
-        id: upload_build
-        uses: actions/upload-artifact@v4
-        with:
-          name: build
-          path: ./dist
-
-  publish-package:
-    runs-on: ubuntu-latest
-    needs: build-package
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build
-          path: ./dist
-          pattern: '**/*'
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-
       - name: Authenticate to npm registry
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -79,7 +52,7 @@ jobs:
         run: npm publish --ignore-scripts
 
       - name: Send Slack Notification for Publish
-        if: steps.publish.outcome == 'success'
+        if: ${{ steps.publish.outcome == 'success' }}
         uses: slackapi/slack-github-action@v1.25.0
         with:
           payload: |
