chore: remove equals sign from commitlint command

--- a/.github/workflows/ci-build-and-test.yml
+++ b/.github/workflows/ci-build-and-test.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm ci
 
       - name: Run commitlint
-        run: npx commitlint --from=origin/main --to=HEAD
+        run: npx commitlint --from origin/main --to HEAD
 
       - name: Lint
         run: npm run lint
