--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zkverifyjs",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Submit proofs to zkVerify and query proof state with ease using our npm package.",
   "author": "Horizen Labs <research@horizenlabs.io>",
   "license": "GPL-3.0",
@@ -74,6 +74,8 @@
     "web3": "4.11.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.9.0",
     "@jest/globals": "29.5.0",
     "@types/debug": "^4.1.12",
@@ -83,6 +85,7 @@
     "@types/web3": "^1.2.2",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
+    "conventional-changelog-cli": "^5.0.0",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -94,11 +97,11 @@
     "prettier": "^3.3.3",
     "remark-parse": "11.0.0",
     "remark-stringify": "11.0.0",
-    "unified": "11.0.5",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.2.0",
+    "unified": "11.0.5",
     "unist-util-visit": "5.0.0"
   }
 }
