--- a/.github/workflows/ci-publish-package.yml
+++ b/.github/workflows/ci-publish-package.yml
@@ -64,9 +64,8 @@ jobs:
 
           sed -i 's/ (#\([0-9]*\))/ (PR #\1)/' release_notes.md
 
-          echo "release_notes<<EOF" >> $GITHUB_ENV
-          cat release_notes.md >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          release_notes=$(cat release_notes.md | sed ':a;N;$!ba;s/\n/\\n/g' | sed 's/"/\\"/g')
+          echo "release_notes=$release_notes" >> $GITHUB_ENV
 
       - name: Publish to npm
         id: publish
