chore: fix tests, update documentation

--- a/.env.template
+++ b/.env.template
@@ -5,4 +5,8 @@ SEED_PHRASE_4=
 SEED_PHRASE_5=
 SEED_PHRASE_6=
 SEED_PHRASE_7=
+SEED_PHRASE_8=
+SEED_PHRASE_9=
+SEED_PHRASE_10=
+SEED_PHRASE_11=
 QA_SLACK_WEBHOOK_URL=
