chore: add new seed phrases to github actions workflow file

--- a/.github/workflows/ci-build-and-test.yml
+++ b/.github/workflows/ci-build-and-test.yml
@@ -17,6 +17,9 @@ jobs:
       SEED_PHRASE_6: ${{ secrets.SEED_PHRASE_6 }}
       SEED_PHRASE_7: ${{ secrets.SEED_PHRASE_7 }}
       SEED_PHRASE_8: ${{ secrets.SEED_PHRASE_8 }}
+      SEED_PHRASE_9: ${{ secrets.SEED_PHRASE_9 }}
+      SEED_PHRASE_10: ${{ secrets.SEED_PHRASE_10 }}
+      SEED_PHRASE_11: ${{ secrets.SEED_PHRASE_11 }}
 
     steps:
       - name: Checkout code
