--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "module": "commonjs",
     "declaration": true,
-    "declarationMap": true,
+    "declarationMap": false,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
