--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@types/web3": "^1.2.2",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
+    "async-mutex": "^0.5.0",
     "conventional-changelog-cli": "^5.0.0",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
