--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zkverifyjs",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Submit proofs to zkVerify and query proof state with ease using our npm package.",
   "author": "Horizen Labs <research@horizenlabs.io>",
   "license": "GPL-3.0",
@@ -12,10 +12,20 @@
     "url": "https://github.com/HorizenLabs/zkverifyjs/issues",
     "email": "support@horizenlabs.io"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/commonjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "default": "./dist/commonjs/index.js",
+      "types": "./dist/types/index.d.ts"
+    }
+  },
   "files": [
-    "dist",
+    "dist/commonjs",
+    "dist/esm",
+    "dist/types",
     "README.md",
     "LICENSE"
   ],
@@ -23,7 +33,10 @@
     "node": ">= 18"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "run-s build:commonjs build:esm build:types",
+    "build:commonjs": "tsc -p tsconfig.commonjs.json",
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "build:types": "tsc -p tsconfig.types.json",
     "pack-and-install": "npm run build && npm pack && rm -rf node_modules/zkverifyjs && npm install ./$(npm pack | tail -n 1) --no-save",
     "bump-version": "npm version $npm_config_level && git add . && git commit -S -m \"chore: bump version to $npm_package_version\" && git push && npm run build",
     "push-tag": "git checkout main && git pull && git tag -s -m $npm_package_version $npm_package_version && git push origin $npm_package_version",
@@ -66,43 +79,44 @@
   ],
   "dependencies": {
     "@polkadot/api": "12.4.2",
-    "@polkadot/extension-dapp": "^0.52.3",
-    "bignumber.js": "^9.1.2",
+    "@polkadot/extension-dapp": "0.58.1",
+    "bignumber.js": "9.1.2",
     "dotenv": "16.4.5",
     "js-sha3": "0.9.3",
     "snarkjs": "0.7.4",
-    "web3": "4.11.1"
+    "web3": "4.16.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@eslint/js": "^9.9.0",
-    "@jest/globals": "29.5.0",
-    "@types/debug": "^4.1.12",
-    "@types/jest": "^29.5.12",
+    "@commitlint/cli": "19.6.1",
+    "@commitlint/config-conventional": "19.6.0",
+    "@eslint/js": "9.18.0",
+    "@jest/globals": "29.7.0",
+    "@types/debug": "4.1.12",
+    "@types/jest": "29.5.14",
     "@types/node": "20.1.1",
-    "@types/snarkjs": "^0.7.8",
-    "@types/web3": "^1.2.2",
-    "@typescript-eslint/eslint-plugin": "^8.2.0",
-    "@typescript-eslint/parser": "^8.2.0",
-    "async-mutex": "^0.5.0",
-    "conventional-changelog-cli": "^5.0.0",
-    "eslint": "^9.9.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "globals": "^15.9.0",
-    "husky": "^9.1.6",
-    "jest": "^29.7.0",
-    "lint-staged": "^15.2.10",
-    "ls-engines": "^0.9.3",
-    "prettier": "^3.3.3",
+    "@types/snarkjs": "0.7.9",
+    "@types/web3": "1.2.2",
+    "@typescript-eslint/eslint-plugin": "8.21.0",
+    "@typescript-eslint/parser": "8.21.0",
+    "async-mutex": "0.5.0",
+    "conventional-changelog-cli": "5.0.0",
+    "eslint": "9.18.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.2.3",
+    "globals": "15.14.0",
+    "husky": "9.1.7",
+    "jest": "29.7.0",
+    "lint-staged": "15.4.1",
+    "ls-engines": "0.9.3",
+    "prettier": "3.4.2",
     "remark-parse": "11.0.0",
     "remark-stringify": "11.0.0",
-    "ts-jest": "^29.2.4",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.2.0",
+    "ts-jest": "29.2.5",
+    "ts-node": "10.9.2",
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.21.0",
     "unified": "11.0.5",
     "unist-util-visit": "5.0.0"
-  }
+  },
+  "sideEffects": false
 }
