--- a/package.json
+++ b/package.json
@@ -78,10 +78,10 @@
     "zkp"
   ],
   "dependencies": {
-    "@polkadot/api": "12.4.2",
+    "@polkadot/api": "15.4.1",
     "@polkadot/extension-dapp": "0.58.1",
     "bignumber.js": "9.1.2",
-    "dotenv": "16.4.5",
+    "dotenv": "16.4.7",
     "js-sha3": "0.9.3",
     "snarkjs": "0.7.4",
     "web3": "4.16.0"
@@ -117,6 +117,9 @@
     "typescript-eslint": "8.21.0",
     "unified": "11.0.5",
     "unist-util-visit": "5.0.0"
+  },
+  "overrides": {
+    "@polkadot/util": "13.3.1"
   },
   "sideEffects": false
 }
