--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -2,8 +2,12 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "module": "commonjs",
+    "target": "ES2020",
     "outDir": "./dist/test",
     "sourceMap": true,
+    "esModuleInterop": true,
+    "strict": true,
+    "skipLibCheck": true,
     "types": ["jest", "node"]
   },
   "include": ["src/**/*", "tests/**/*"],
