--- a/tsconfig.commonjs.json
+++ b/tsconfig.commonjs.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "module": "commonjs",
-    "outDir": "./dist/commonjs"
+    "outDir": "./dist/commonjs",
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.spec.ts", "**/*.test.ts"]
