--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,16 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
-    "declaration": true,
-    "declarationMap": false,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist",
-    "types": ["node", "jest"],
+    "sourceMap": false,
+    "moduleResolution": "node",
     "lib": ["DOM", "ES2020"]
   },
   "include": ["src/**/*"],
