--- a/.github/workflows/ci-build-and-test.yml
+++ b/.github/workflows/ci-build-and-test.yml
@@ -20,6 +20,8 @@ jobs:
       SEED_PHRASE_9: ${{ secrets.SEED_PHRASE_9 }}
       SEED_PHRASE_10: ${{ secrets.SEED_PHRASE_10 }}
       SEED_PHRASE_11: ${{ secrets.SEED_PHRASE_11 }}
+      SEED_PHRASE_12: ${{ secrets.SEED_PHRASE_12 }}
+      SEED_PHRASE_13: ${{ secrets.SEED_PHRASE_13 }}
 
     steps:
       - name: Checkout code
